Finish line in level 3!!

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-New porject.uitstate.xml
+*.uistate.xml
+Layouts/Level 2.uistate.xml
+Layouts/Level 3.uistate.xml
+New project.uistate.xml
+New project.uistate.xml
+New project.uistate.xml
