--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ Layouts/Level 3.uistate.xml
 New project.uistate.xml
 New project.uistate.xml
 New project.uistate.xml
+Layouts/Level 1.uistate.xml
+Layouts/Level 2.uistate.xml
+Layouts/Level 3.uistate.xml
+Layouts/Menu.uistate.xml
